# ball-balancing-software

./: .gitignore  CMakeLists.txt  README.md  kinematics.py  pytest.ini  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
cmake-modules/: FindOpenCV.cmake
docs/: arucotags.md
docs/architecture/: core.md
include/: aruco_samples_utility.hpp  camera_info.hpp  interfacing.hpp  pose_estimation.h  pose_estimation.hpp
kinematics/: motor.py  plate_kinematics.py
kinematics/tests/: test_kinematics.py
python/: aruco_detection  kinematics_input.txt  macbook_calib.yml  pyproject.toml  run_homing.py  test.py
python/camera/: ball_detect.py
python/example_module/: pyproject.toml
python/hlc/: ball_position.py  controller.py  homing.py  main.py
python/kinematics/: constants.py  kinematics.py  main.py  motor.py  plate_kinematics.py  pyproject.toml  tele_op_kinematics.py  wrappers.py
python/kinematics/tests/: test.py  test_kinematics.py
python/kinematics/utils/: helper.py
python/pid/: __init__.py  position_feedback.py
python/serial/: motor_serial.py  parse_process.py  run_tele_op.py  serial.py  serial_utils.py
python/tele-op/: parse_process.py  run_tele_op.py  serial_forward.py  serial_utils.py
python/tests/: test.py
src/: CMakeLists.txt  aruco_detection.cpp  aruco_detection_rpi.cpp  ball_detection.cpp  ball_detection_rpi.cpp  calibration.cpp  calibration_rpi.cpp  homing.cpp  marker_generation.cpp  pose_estimation.cc  pose_estimation.cpp  pose_estimation.h  pyproject.toml  requirements.txt  test_cam.cpp
src/computer_vision/: __init__.py  ball_detection.py  transforms.py
src/core/: __init__.py  constants.py  main.py
src/inverse_kinematics/: __init__.py  plate_kinematics.py
src/joystick/: joystick.ino
src/joystick2py/: __init__.py  joystick_as_ball.py  joystick_serial.py  reader.py
src/kinematics/: plate_kinematics.py  wrappers.py
src/motion_planner/: __init__.py  planner.py
src/pid/: __init__.py  position_feedback.py
src/py2motor/: __init__.py  writer.py
src/serial2py/: __init__.py  joystick_serial.py  reader.py
tests/: pytest.ini  test_inverse_kinematics.py  test_joystick2py.py
