[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mte380_python_software"
description = "MTE380 Python Software"
version = "0.0.1"
dependencies = [
  "numpy",
  "pytest"
]
requires-python = ">= 3.10"
authors = [
  {name = "voat", email = "oliviawxye@gmail.com"},
]

[tool.setuptools]
packages = ["kinematics", "hlc"]
