[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PAAS"
description = "The real deal"
version = "0.0.1"
dynamic = ["dependencies"]
requires-python = ">= 3.9"
authors = []

[tool.setuptools]
packages = [
  "core", 
  "inverse_kinematics", 
  "joystick2py",
  "py2motor",
  "pid"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
