[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PAAS"
description = "The real deal"
version = "0.0.1"
dynamic = ["dependencies"]
requires-python = ">= 3.9"
authors = []

[tool.setuptools]
packages = [
  "computer_vision",
  "core", 
  "inverse_kinematics", 
  "motion_planner",
  "serial2py",
  "py2motor",
  "pid"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
