[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ball-balancing-robot"
description = "The real deal"
version = "0.0.1"
dynamic = ["dependencies"]
requires-python = ">= 3.9"
authors = []

[tool.setuptools]
packages = [
  "computer_vision",
  "core", 
  "inverse_kinematics", 
  "motion_planner",
  "serial2py",
  "py2motor",
  "pid"
]
[project.scripts]
start="core:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
