[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mte-380-software"
description = "MTE380 software"
version = "0.0.0"
dependencies = [
  "numpy"
]
requires-python = ">= 3.10"
authors = [
  {name = "Olivia Ye", email = "oliviawxye@gmail.com"},
]
