[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kinematics"
description = "MTE380 software kinematics"
version = "0.0.1"
dependencies = [
  "numpy"
]
requires-python = ">= 3.10"
authors = [
  {name = "voat", email = "oliviawxye@gmail.com"},
]
